--- a/DattingApp-SPA/src/app/nav/nav.component.html
+++ b/DattingApp-SPA/src/app/nav/nav.component.html
@@ -11,6 +11,10 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/lists']">lists</a>
       </li>
+      <button type="button" class="btn btn-primary">
+        Profile <span class="badge badge-light">9</span>
+        <span class="sr-only">unread messages</span>
+      </button>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link " [routerLink]="['/messages']" >Message</a>
       </li>
